Bug 309050 - Wrong height for local-xmpp list view
Summary: Wrong height for local-xmpp list view
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: accounts-kcm (other bugs)
Version First Reported In: git-latest
Platform: unspecified Linux
: NOR minor
Target Milestone: 0.5-next
Assignee: Telepathy Bugs
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2012-10-26 15:00 UTC by Daniele E. Domenichelli
Modified: 2013-02-15 21:22 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniele E. Domenichelli 2012-10-26 15:00:08 UTC
The list view for local-xmpp account is slightly higher than the list item, so when the item is selected there is an ugly white stripe in the bottom (see http://wstaw.org/m/2012/10/26/snapshot100.png ).
I have the same issue on 2 different computers, but some time ago I didn't have it so it is probably something not using the correct size hint or some fixed value.

Marking this as a junior-job...
HINT: ktp-accounts-kcm repo -> src/kcm-telepathy-accounts.cpp -> salutListView
Comment 1 Stefan Eggers 2013-01-04 08:38:22 UTC
Created review request for a change that fixes this for me: https://git.reviewboard.kde.org/r/108153/
Comment 2 David Edmundson 2013-01-28 21:22:55 UTC
Git commit 9c720566f0ae32f1de5358cdae7a134e2841000a by David Edmundson, on behalf of Stefan Eggers.
Committed on 28/01/2013 at 22:20.
Pushed by davidedmundson into branch 'master'.

Fix height for local-xmpp list view

The list item was slightly smaller than the containing list view for
small font sizes. When it was selected there was a small strip below
which didn't belong to the item and didn't change color. Fixed this.

For really large fonts the list view didn't get high enough and thus
got truncated. This gets fixed at the same time.

REVIEW: 108153

M  +1    -0    src/kcm-telepathy-accounts.cpp

http://commits.kde.org/telepathy-accounts-kcm/9c720566f0ae32f1de5358cdae7a134e2841000a