src/kcm-telepathy-accounts.cpp
@@ -151,6 +151,7 @@ KCMTelepathyAccounts::KCMTelepathyAccounts(QWidget *parent, const QVariantList& 
 
     int height = salutDelegate->sizeHint(QStyleOptionViewItem(), m_salutFilterModel->index(0,0)).height() + 3*2;
     m_ui->salutListView->setMinimumHeight(height);
+    m_ui->salutListView->setMaximumHeight(height);
     m_ui->salutEnableFrame->setMinimumHeight(height);
 
     connect(accountsDelegate,
